# flatqube-pair-py

./: Cargo.toml  README.md  example.py  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
